# trabalho-BI

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
docs/: architecture.md  data_dictionary.md  dbdiagram.dbml  relatorio_projeto_bi.html  relatorio_projeto_bi.md
sql/: analysis_queries.sql
src/: __init__.py  config.py  dashboard_marts.py  explore_public_sources.py  fake_internal.py  google_sheets.py  load_warehouse.py  pipeline.py  sources_public.py  transform.py
warehouse/: bi_fundos.sqlite
