[project]
name = "trab-bi-backend"
version = "0.1.0"
description = "Pipeline de dados para projeto de BI com fontes publicas, dados fake internos e carga em warehouse."
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
extend-exclude = [
    "data",
    "warehouse",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "PTH",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
