[project]
name = "trab-bi-backend"
version = "0.1.0"
description = "Pipeline de dados para projeto de BI com fontes publicas, dados fake internos e carga em warehouse."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Faker==33.1.0",
    "SQLAlchemy==2.0.36",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "psycopg2-binary==2.9.10",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "requests==2.32.3",
    "streamlit==1.41.1",
    "yfinance==0.2.50",
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
extend-exclude = [
    "data",
    "warehouse",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "PTH",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
